2008-08-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.CodeAnalysis.mdp: Fix reference to Mono.TextEditor. The
	  incorrect add-in version number causes problems in the makefile
	  synchronization.

2008-04-24  Daniel Abramov <ex@vingrad.ru> 

	* Makefile.am, MonoDevelop.CodeAnalysis.mdp: added new files
	* MonoDevelop.CodeAnalysis.addin.xml: upgraded MD version to 1.0 and added extension nodes
	* CodeAnalysis/AssemblyAnalyzerFacadeAttribute.cs: (new) attribute required for loading
	plugin assemblies (like Gendarme, Smokey)
	* CodeAnalysis/CodeAnalysisException.cs: (new) exception type for code analysis engine
	* CodeAnalysis/DictionaryBasedRuleLoader.cs: minor changes
	* CodeAnalysis/IAnalyzer.cs: (new) analyzer interface to be implemented by Gendarme/Smokey addins
	* CodeAnalysis/MainAnalyzer.cs: class that performs analysis of a CombineEntry using
	dynamically loaded analyzer assemblies
	* Commands/AnalyzeHandler.cs: a handler for MD CodeAnalysis commands (solution pad context menu)
	* Commands/Commands.cs: rename to CodeAnalysisCommands.cs (by its type name)
	* Commands/CodeAnalysisCommands.cs: (new) renamed Commands.cs
	* Gui/ResultsReporter.cs: (new) class that handles GUI interaction	

2008-03-16  Daniel Abramov <ex@vingrad.ru> 

	* Argument.cs: a class performing checks and throwing exceptions if needed
	* CodeAnalysis/Category.cs, CodeAnalysis/CodeLocation.cs, CodeAnalysis/Confidence.cs,
	CodeAnalysis/IRule.cs, CodeAnalysis/IRuleLoader.cs, CodeAnalysis/IRunner.cs,
	CodeAnalysis/IViolation.cs, CodeAnalysis/Severity.cs, Commands/Commands.cs,
	Extensions/RuleLoaderExtension.cs, : Code is formatted according to Mono Coding Guidelines
	* CodeAnalysis/DictionaryBasedRuleLoader.cs: extracted some shared code for rule loaders	

2008-03-16  Daniel Abramov <ex@vingrad.ru> 

	* CodeAnalysis/IRunner.cs: added Run () method.

2008-03-14  Ben Motmans <ben.motmans@gmail.com> 

	* MonoDevelop.CodeAnalysis.addin.xml: added addin metadata